[metadata]
name = zenoss
version = file: package_version
maintainer = Zenoss, Inc.
maintainer_email = dev@zenoss.com
url = https://www.zenoss.com
description = Zenoss Platform
long_description = file: README.md
license = Commercial

[options]
zip_safe = False
packages = find:
package_dir =
	=src
include_package_data = True
namespace_packages =
	Products
	zenoss
python_requires = >=2.7,<3
scripts =
	bin/addSystemUser.py
	bin/adjustSchedulesForDST.py
	bin/bash_completers
	bin/dumpstats
	bin/exportxml
	bin/mib_split.py
	bin/monitored-datapoints
	bin/rasterize.js
	bin/rebuildjs
	bin/runtests
	bin/runtests.py
	bin/service-migrate.py
	bin/zenactiond
	bin/zenbincheck
	bin/zencommand
	bin/zendb
	bin/zendisc
	bin/zendoc_base
	bin/zendoc_zenpack
	bin/zeneventd
	bin/zenfunctions
	bin/zenglobalconf
	bin/zenhub
	bin/zenhubworker
	bin/zenlockout
	bin/zenlockout.py
	bin/zenmail
	bin/zenmodeler
	bin/zenossdbpack
	bin/zenpack
	bin/zenpack_batch
	bin/zenpack_install
	bin/zenpass
	bin/zenperfsnmp
	bin/zenping
	bin/zenpop3
	bin/zenprocess
	bin/zenq
	bin/zenrun
	bin/zensendevent
	bin/zenstatus
	bin/zensyslog
	bin/zentestcommand
	bin/zentestds
	bin/zentrap
	bin/zenupgrade
	bin/zipzenpack
	bin/zpasswd.py
	bin/zsupervisor

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	configcache = Products.ZenCollector.configcache.__main__:main
	dcsh = Products.ZenUtils.RunCommand:main
	model_catalog_init = Products.Zuul.catalog.model_catalog_init:main
	reportloader = Products.ZenReports.ReportLoader:main
	reportmail = Products.ZenReports.ReportMail:main
	transformfailedevent = Products.ZenUtils.transformfailedevent:main
	zenackevents = Products.ZenEvents.zenackevents:main
	zenbatchdump = Products.ZenModel.BatchDeviceDumper:main
	zenbatchload = Products.ZenModel.BatchDeviceLoader:main
	zenbuild = Products.ZenModel.zenbuild:main
	zencatalog = Products.ZenUtils.zencatalog:main
	zencheckzends = Products.ZenUtils.ZenCheckZenDS:main
	zencheckzopes = Products.ZenUtils.requestlogging.ZenCheckZopesAssignments:main
	zenchkrels = Products.ZenUtils.CheckRelations:main
	zenchkschema = Products.ZenRelations.checkrel:main
	zencyberark = Products.ZenCollector.zencyberark:main
	zendmd = Products.ZenModel.zendmd:main
	zendump = Products.ZenRelations.ExportRM:main
	zenjobs = Products.Jobber.bin:main
	zenload = Products.ZenRelations.ImportRM:main
	zenmib = Products.ZenModel.zenmib:main
	zenmigrate = Products.ZenModel.migrate.zenmigrate:main
	zenpackdaemons = Products.ZenUtils.ZenPackDaemons:main
	zenschemadoc = Products.ZenRelations.schemadoc:main
	zensendsyslog = Products.ZenEvents.zensendsyslog:main
	zproprmlocal = Products.ZenUtils.zproprmlocal:main
celery.commands =
   monitor = Products.Jobber.monitor:MonitorCommand
